<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dictionary">

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="com.prasad.abbreviationsfinder.view.ui.dictionary.DictionaryFragment"
        android:label="@string/dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/navigation_abbreviations"
        android:name="com.prasad.abbreviationsfinder.view.ui.acronyms.AbbreviationFragment"
        android:label="@string/acronyms"
        tools:layout="@layout/fragment_abbreviations" />
    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.prasad.abbreviationsfinder.view.ui.bookmark.BookmarkFragment"
        android:label="@string/bookmarks"
        tools:layout="@layout/fragment_bookmark" >
        <action
            android:id="@+id/action_navigation_bookmarks_to_bookmarksInfoFragment"
            app:destination="@id/navigation_bookmarksInfo" />
    </fragment>
    <dialog
        android:id="@+id/navigation_bookmarksInfo"
        android:name="com.prasad.abbreviationsfinder.view.ui.bookmark.BookmarksInfoFragment"
        android:label="fragment_bookmarks_info_list_dialog"
        tools:layout="@layout/fragment_bookmarks_info_list_dialog" >
        <argument
            android:name="bookmark"
            app:argType="com.prasad.abbreviationsfinder.model.Bookmarks" />
    </dialog>
</navigation>